Bug 301071 - Devices entries does not mount nor switch directory to device folder
Summary: Devices entries does not mount nor switch directory to device folder
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: 2.0.95
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: regression
: 302083 302849 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-02 21:16 UTC by Timothée Ravier
Modified: 2012-08-08 14:32 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timothée Ravier 2012-06-02 21:16:19 UTC
For removable devices (USB HDD, pen drives at least), "Devices" entries in the PLaces panel does not mount nor switch to directory once the device is mounted.
This works fine in konqueror so it looks like a dolphin bug.

Reproducible: Always

Steps to Reproduce:
1. Plug an external HDD
2. Open Dolphin
3. Click on the device entry corresponding
Actual Results:  
Nothing happens

Expected Results:  
Dolphin should mount the device and switch to the directory

Apart from that, thanks for the additionnal options (expendable folders), good job !
Comment 1 Frank Reininghaus 2012-06-04 13:28:37 UTC
Thanks for the bug report! I can reproduce this in master.
Comment 2 Frank Reininghaus 2012-06-04 14:26:34 UTC
Just for the record, the code that does the mounting in KFilePlacesModel is in

void KFilePlacesModel::requestSetup(const QModelIndex &index)

which gets called from

void KFilePlacesView::Private::_k_placeClicked(const QModelIndex &index)

The class which does the mounting is Solid::StorageAccess.
Comment 3 Peter Penz 2012-06-04 15:09:48 UTC
Thanks Frank for the hint, I'll take care to fix this.
Comment 4 Peter Penz 2012-06-07 21:01:26 UTC
Git commit 29f980fb63e546fe730b59fa0cc5123fb1329090 by Peter Penz.
Committed on 07/06/2012 at 22:59.
Pushed by ppenz into branch 'master'.

Setup storage device if needed
FIXED-IN: 4.9.0

M  +5    -0    dolphin/src/panels/places/placesitem.cpp
M  +2    -0    dolphin/src/panels/places/placesitem.h
M  +67   -5    dolphin/src/panels/places/placesitemmodel.cpp
M  +9    -1    dolphin/src/panels/places/placesitemmodel.h
M  +54   -9    dolphin/src/panels/places/placespanel.cpp
M  +6    -0    dolphin/src/panels/places/placespanel.h

http://commits.kde.org/kde-baseapps/29f980fb63e546fe730b59fa0cc5123fb1329090
Comment 5 Cédric Bellegarde 2012-06-14 09:34:57 UTC
Is this fixed in beta2 ?

Here, dolphin mount device (better than beta1) but can't access it when clicking on "places panel"
Comment 6 Peter Penz 2012-06-14 14:18:17 UTC
It should be fixed in beta 2. What do you mean with "can't access"? That no content is shown? Does it work in beta 2 if you use the file-open dialog? (e.g. by using KWrite)
Comment 7 Cédric Bellegarde 2012-06-14 15:32:33 UTC
It works in file-open dialog...

In dolphin, device get mounted but when i click on it, dolphin just do nothing (no path change)

Using archlinux + kde-unstable repository.
Comment 8 Peter Penz 2012-06-15 08:47:55 UTC
Thanks for the update. Strange: I can reproduce the issue with my external hard disk now although when I fixed the bug it seemed to worked fine. Will investigate...
Comment 9 Peter Penz 2012-06-15 09:38:15 UTC
Git commit 1f9cff7607e9655c263987a7bfe3be05e409e6ea by Peter Penz.
Committed on 15/06/2012 at 11:36.
Pushed by ppenz into branch 'master'.

Update the URL if the accessibility has been changed

M  +1    -0    dolphin/src/panels/places/placesitem.cpp

http://commits.kde.org/kde-baseapps/1f9cff7607e9655c263987a7bfe3be05e409e6ea
Comment 10 Peter Penz 2012-06-15 09:42:14 UTC
I found the issue and it seems to work now. I'm confident that everything is fine now, but before setting it to RESOLVED it would be great if you could double-check whether it works in your environment too with the next RC (there is always the chance that I missed a specific setup-configuration that did not occur in my environment). Thanks!
Comment 11 Peter Penz 2012-06-17 19:05:32 UTC
*** Bug 302083 has been marked as a duplicate of this bug. ***
Comment 12 Sebastian Grüner 2012-07-22 20:36:12 UTC
the described issue is fixed in the rc, but i think i found an bug related to this.
instead of clicking on the device entry, i right-clicked and tried to open in new tab.

result: device doesn't get mounted and the new tab shows the error: the location is empty
Comment 13 Jekyll Wu 2012-08-01 19:30:33 UTC
*** Bug 302849 has been marked as a duplicate of this bug. ***
Comment 14 Jekyll Wu 2012-08-08 14:31:18 UTC
(In reply to comment #12)
> the described issue is fixed in the rc, but i think i found an bug related
> to this.
> instead of clicking on the device entry, i right-clicked and tried to open
> in new tab.
> 
> result: device doesn't get mounted and the new tab shows the error: the
> location is empty

Please open another report for that problem. It is hard to track two problems in one report.