Setup storage device if needed

BUG: 301071
FIXED-IN: 4.9.0